Clarify syntax of LF-level hypothetical judgement

--- a/main.tex
+++ b/main.tex
@@ -620,7 +620,8 @@ Then the typing judgements are given:
 \end{quote}
 
 We will restrict the hypothetical judgement to only contain hypotheses of the
-form \infers{x}{A} where $x$ is a variable, or \type\alpha\ where $\alpha$ is a variable:
+form \infers{x}{A} where $x$ is a variable, or \type\alpha\ where $\alpha$ is a
+variable, or further hypothetical judgements:
 \begin{quote}
   To know
   \lfhyp{\mathcal{J}}{\mathcal{J}_1,\dots,\mathcal{J}_n} is
