--- a/main.tex
+++ b/main.tex
@@ -541,7 +541,7 @@ define an object of type \prf{P} to be an $\mathcal{L}$-derivation of
 reflect the harmony of introduction and elimination rules.
 
 It is time to revisit what it means to be an ``object'' of a type in the
-proof-theoretic type theory, we must note how this will necessarily differ from
+proof-theoretic type theory; we must note how this will necessarily differ from
 what it meant to be a ``verification'' of a proposition in the previous
 sections. Namely, a verification of a proposition is either a \emph{canonical
 verification} of that proposition (and what sort of thing this might be is
@@ -601,7 +601,7 @@ is (and by the way, it is $\alpha$)''.  On the other hand, \checks{M}{\alpha} is
 analytic, and it carries the epistemic content of the old $M:\alpha$ judgement; to
 know it is to know that $M$ computes to a normal proof of $\alpha$.
 
-Let us amend the meaning explanation for the other judgements; first, typehood,
+Let us amend the meaning explanation for the judgements of type theory; first, typehood,
 which will once again be cast in terms of canonical forms (of proofs, not
 verifications):
 \begin{quote}
