Remove false statement

--- a/main.tex
+++ b/main.tex
@@ -336,14 +336,13 @@ to account for new propositions and verifications
 
 \subsection{Analytic and Synthetic Judgement}
 
-The judgements of the theory we have developed so far are uniformly
-\emph{synthetic}. Now, a synthetic judgement is one for which the experience of
-\emph{coming to know it} necessarily results in the synthesis of some new
-information; on the other hand, to know an \emph{analytic} judgement is to know
-it purely on the basis of the information contained inside it. So analytic
-judgements are decidable, since if they may become evident, it will be purely
-on the basis of their own conent; whereas synthetic judgements become evident
-when one has acquired some particular evidence for them.
+A synthetic judgement is one for which the experience of \emph{coming to know
+it} necessarily results in the synthesis of some new information; on the other
+hand, to know an \emph{analytic} judgement is to know it purely on the basis of
+the information contained inside it. So analytic judgements are decidable,
+since if they may become evident, it will be purely on the basis of their own
+conent; whereas synthetic judgements become evident when one has acquired some
+particular evidence for them.
 
 A logical theory has, then, both analytic and synthetic judgements; the
 judgement \isprop{P} is analytic, since its evidence follows from the
