--- a/main.tex
+++ b/main.tex
@@ -238,8 +238,8 @@ verifications.
 
 It is a hallmark of Martin-L\"of's program to resolve the contradiction between
 syntax and semantics not by choosing symbols over meanings or meanings over
-symbols, but by endowing symbols with meaning in the course of making evident
-the true judgements. As such $P$ is a symbol, but when we assert \isprop{P} we
+symbols, but by endowing symbols with meaning in the course of knowing the
+evident judgements. As such $P$ is a symbol, but when we assert \isprop{P} we
 are saying that we know what proposition $P$ denotes.
 
 A similar thing can be done with verifications themselves, by placing them in
