--- a/main.tex
+++ b/main.tex
@@ -341,7 +341,7 @@ it} necessarily results in the synthesis of some new information; on the other
 hand, to know an \emph{analytic} judgement is to know it purely on the basis of
 the information contained inside it. So analytic judgements are decidable,
 since if they may become evident, it will be purely on the basis of their own
-conent; whereas synthetic judgements become evident when one has acquired some
+content; whereas synthetic judgements become evident when one has acquired some
 particular evidence for them.
 
 A logical theory has, then, both analytic and synthetic judgements; the
