--- a/main.tex
+++ b/main.tex
@@ -408,7 +408,7 @@ interpret the judgements of the logical theory, and this methodology is called
 ``judgements as types'' (and this implies ``derivations as terms'').
 
 What I am calling a ``proof-theoretic type theory'' is a type theory of the
-sort used in the the proof assistants Agda, Coq and Idris, whereas the kind of
+sort used in the proof assistants Agda, Coq and Idris, whereas the kind of
 type theory that I have described in the previous sections, the one based on
 meaning explanations, underlies the proof assistant Nuprl.
 
@@ -427,7 +427,7 @@ the judgement \istrue{P}, which can be construed as the ``object language''.
 
 In short, the judgements \ver{M}{P} and $M:P$ are unrelated to each other in
 two respects: firstly, that they have different meanings, and secondly that the
-one is at the same level as the judgements of a logical theory, whereas the the
+one is at the same level as the judgements of a logical theory, whereas the
 latter is a judgement in a theory which is defined over a logical theory.
 
 \subsection{Meaning explanations for proof theoretic type theory}
@@ -544,7 +544,7 @@ proof-theoretic type theory; we must note how this will necessarily differ from
 what it meant to be a ``verification'' of a proposition in the previous
 sections. Namely, a verification of a proposition is either a \emph{canonical
 verification} of that proposition (and what sort of thing this might be is
-known from the the presupposition \isprop{P}), or it is a means of getting such
+known from the presupposition \isprop{P}), or it is a means of getting such
 a canonical verification (i.e. a term which evaluates to a canonical
 verification).
 
