--- a/prooftheory.tex
+++ b/prooftheory.tex
@@ -241,18 +241,22 @@ $P$ for any \emph{arbitrary} object/expression $n$ such that $n:\naturals$
 do not necessarily know that it is a numeral).
 
 
-\section{A critique of \textbf{MLLF}}
+\section{A Critique of \textbf{MLLF}}
 
 The type theory which we constructed in the previous section is to be
-considered a proof theory for a logic with the judgements \isprop{P}, \istrue{P}
-and \hyp{\mathcal{J}}{\mathcal{J}_1,\dots,\mathcal{J}_n}. Unlike the type
-theory in the first chapter, there is no built-in computational content.
+considered a proof theory for a logic with the judgements \isprop{P},
+\istrue{P} and \hyp{\mathcal{J}}{\mathcal{J}_1,\dots,\mathcal{J}_n}. There are
+a few reasons to be dissatisfied with this state of affairs, which I shall
+enumerate in this section.
 
-In a computational type theory which is defined by the verificationist meaning
-explanations, the computational content of terms is understood immediately by
-means of the \reduce{M}{M'} relation; that is, computation is prior to the main
-judgements because their meaning explanations are defined in terms of
-evaluation to canonical form.
+\subsection{Lack of Computational Content}
+
+Unlike the type theory in the first chapter, there is no built-in computational
+content. In a computational type theory which is defined by the verificationist
+meaning explanations, the computational content of terms is understood
+immediately by means of the \reduce{M}{M'} relation; that is, computation is
+prior to the main judgements because their meaning explanations are defined in
+terms of evaluation to canonical form.
 
 On the other hand, in the type theory above we did not give a primitive
 reduction relation; instead, we simply permitted the endowement of proofs
@@ -277,8 +281,55 @@ $M=N:\alpha$) as giving rise to a closed formal system which is susceptible to
 metamathematical argument: to refer to evaluation in the meaning explanations
 for the core judgements, then, would be impredicative.
 
-\section{Verifications and Uses}
+\subsection{Modularity of definition}
 
+By the same token, the distinction between canonical (direct) and non-canonical
+(indirect) proof may not be understood as a core notion in the theory, but must
+be understood separately, secondarily. Why is this a problem? It means that the
+definition of each type must be made with the full knowledge of the definitions
+of every other type; in essence, the open-ended nature of type theory is
+obliterated and one is forced into a fixed formal system; this is in addition
+to the fact that it causes the epistemic content of \type\alpha for any type
+$\alpha$ to be extremely complicated.
+
+To illustrate, let us consider an example which is a type theory that has four
+type-formers: trivial truth $\top$, trivial falsity $\bot$, implication
+$(\alpha)\beta$, and conjunction \product\alpha\beta; we will then introduce the
+following terms to represent proofs: the trivial element $\bullet$,
+\emph{reductio ad absurdum} \abort{\alpha}{E}, abstraction $[x]E$, application
+$E(E')$, pairing \pair{E}{E'}, and projections \fst{E}, \snd{E}.
+
+If we will try to make the judgement \type\top\ evident, the deficiencies of
+formulation will immediately present themselves.
+
+\begin{quote}
+To know \type\top\ is to know what counts as an object of type $\top$, and when
+two such objects are equal. An object of type $\top$, then, is either the
+expression $\bullet$, or an expression \abort{\top}{E} such that we know
+$E:\bot$, or an expression $E(E')$ such that we know $E:(\alpha)\top$ and
+$E':\alpha$, or an expression \fst{E} such that we know $E:\product\top\beta$
+and \type\beta, or an expression \snd{E} such that we know
+$E:\product\alpha\top$ and \type\alpha; and we additionally have that $\bullet$
+is equal to $\bullet$, and ...
+\end{quote}
+
+To save space, we elide the rest of the definition of equality for $\top$; what
+we have seen so far already suffices to bring to light two serious problems:
+
+\begin{enumerate}
+
+  \item The meaning explanation of \type\alpha\ is not obvious predicative,
+  since it depends upon the meaning of $M:\alpha$.
+
+  \item The definition of any type requires knowledge of the entire syntax of
+  the theory. The judgement \type\alpha\ may never be made evident in isolation,
+  but must be done with full understanding of all the other types and their definitions.
+
+\end{enumerate}
+
+Furthermore, to extend an existing theory with a new type, the definitions of
+every other type must be rewritten to account for the elimination forms of the
+new type.
 
 %% As soon as we have begun to consider the computation of open terms to normal
 %% form, as opposed to the computation of closed terms to canonical form, a more
