Credit where credit is due

--- a/main.tex
+++ b/main.tex
@@ -46,9 +46,9 @@
 \title{Type theory and its meaning explanations}
 \author{Jonathan Sterling}
 
-\thanks{Thanks to Bob Harper, Peter Dybjer and Bengt Norstr\"om for invaluable
-conversations that helped to clarify my understanding of the meaning
-explanations for Martin-L\"of's Type Theory.}
+\thanks{Thanks to Bob Harper, Peter Dybjer, Bengt Norstr\"om and Darin Morrison
+for invaluable conversations which helped sharpen my view of the meaning
+explanations for computational and intensional type theories.}
 
 % \address{AlephCloud Systems}
 % \email{jon@jonmsterling.com}
